[gd_scene load_steps=10 format=1]

[ext_resource path="res://rcos/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://virtual_gamepads/widgets/emupad_widget/config_gui/emupad_config_gui.gd" type="Script" id=2]
[ext_resource path="res://virtual_gamepads/widgets/emupad_widget/config_gui/stick_config_gui.gd" type="Script" id=3]
[ext_resource path="res://rcos/fonts/teko/bitmap/teko-regular-22.fnt" type="BitmapFont" id=4]
[ext_resource path="res://virtual_gamepads/widgets/emupad_widget/config_gui/dpad_config_gui.gd" type="Script" id=5]
[ext_resource path="res://virtual_gamepads/widgets/emupad_widget/config_gui/touchpad_config_gui.gd" type="Script" id=6]
[ext_resource path="res://virtual_gamepads/widgets/emupad_widget/config_gui/button_config_gui.gd" type="Script" id=7]
[ext_resource path="res://rcos/fonts/font_awesome/Font Awesome 5 Free-Solid-900.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 8 )

[node name="emupad_config_gui" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 271.0
script/script = ExtResource( 2 )

[node name="mode_buttons" type="HButtonArray" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0
custom_constants/button_separator = 2
flat = false
button/count = 4
button/min_button_size = -1.0
button/align = 4
button/0/text = "Stick"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "DPad"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "Touchpad"
button/2/tooltip = ""
button/2/icon = null
button/3/text = "Button"
button/3/tooltip = ""
button/3/icon = null
button/selected = 0

[node name="tabs" type="MarginContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="stick_config_gui" type="Control" parent="tabs"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 231.0
script/script = ExtResource( 3 )

[node name="radius" type="Control" parent="tabs/stick_config_gui"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 77.0

[node name="header_label" type="Label" parent="tabs/stick_config_gui/radius"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 9.0
margin/right = 47.0
margin/bottom = 23.0
text = "Radius"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/stick_config_gui/radius"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 70.0
range/min = 10.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/stick_config_gui/radius"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 129.0
margin/top = 30.0
margin/right = 179.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="threshold" type="Control" parent="tabs/stick_config_gui"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 0.0
margin/bottom = 149.0

[node name="header_label" type="Label" parent="tabs/stick_config_gui/threshold"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 9.0
margin/right = 53.0
margin/bottom = 23.0
text = "Threshold"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/stick_config_gui/threshold"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 70.0
range/min = 0.0
range/max = 90.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/stick_config_gui/threshold"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 135.0
margin/top = 30.0
margin/right = 179.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dpad_config_gui" type="Control" parent="tabs"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 231.0
script/script = ExtResource( 5 )

[node name="radius" type="Control" parent="tabs/dpad_config_gui"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 79.0

[node name="header_label" type="Label" parent="tabs/dpad_config_gui/radius"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 9.0
margin/right = 47.0
margin/bottom = 23.0
text = "Radius"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/dpad_config_gui/radius"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 70.0
range/min = 10.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/dpad_config_gui/radius"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 121.0
margin/top = 30.0
margin/right = 179.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="threshold" type="Control" parent="tabs/dpad_config_gui"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 0.0
margin/bottom = 149.0

[node name="header_label" type="Label" parent="tabs/dpad_config_gui/threshold"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 9.0
margin/right = 47.0
margin/bottom = 23.0
text = "Threshold"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/dpad_config_gui/threshold"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 70.0
range/min = 0.0
range/max = 90.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/dpad_config_gui/threshold"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 118.0
margin/top = 30.0
margin/right = 179.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="touchpad_config_gui" type="Control" parent="tabs"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 231.0
script/script = ExtResource( 6 )

[node name="button_config_gui" type="Control" parent="tabs"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 231.0
script/script = ExtResource( 7 )

[node name="button_num" type="Control" parent="tabs/button_config_gui"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 79.0

[node name="header_label" type="Label" parent="tabs/button_config_gui/button_num"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 9.0
margin/right = 47.0
margin/bottom = 23.0
text = "Button Number"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/button_config_gui/button_num"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 70.0
range/min = 1.0
range/max = 128.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/button_config_gui/button_num"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 109.0
margin/top = 30.0
margin/right = 175.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dec_button" type="Button" parent="tabs/button_config_gui/button_num"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 75.0
margin/right = 140.0
margin/bottom = 115.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ""
flat = false

[node name="inc_button" type="Button" parent="tabs/button_config_gui/button_num"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 142.0
margin/top = 75.0
margin/right = 182.0
margin/bottom = 115.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ""
flat = false

[node name="mode" type="Control" parent="tabs/button_config_gui"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 126.0

[node name="header_label" type="Label" parent="tabs/button_config_gui/mode"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 9.0
margin/right = 47.0
margin/bottom = 23.0
text = "Mode"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mode_buttons" type="VButtonArray" parent="tabs/button_config_gui/mode"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 155.0
flat = false
button/count = 2
button/min_button_size = 40.0
button/align = -353703190
button/0/text = "Default"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Toggle"
button/1/tooltip = ""
button/1/icon = null
button/selected = 0


